# kaggle-housing-prices-lgbm

./: .gitignore  Makefile  README.md  lgbm.ipynb  pyproject.toml
notebooks/: .env  eda.ipynb  lgbm.ipynb  preprocess.ipynb
