[tool.poetry]
name = "housing-prices"
version = "0.1.0"
description = "Practicing LightGBM by trying to solve housing-prices problem on kaggle https://www.kaggle.com/competitions/house-prices-advanced-regression-techniques/overview"
authors = ["Faiz <ghost0x07@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
pandas = "^1.4.3"
lightgbm = "^3.3.2"
pandas-profiling = "^3.2.0"
scikit-learn = "^1.1.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
ipywidgets = "^7.7.1"
ipykernel = "^6.15.1"
kaggle = "^1.5.12"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
